<resources>
    <string name="app_name">AddressBook</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_delete">Delete</string>
    <string name="action_delete_all">Delete All</string>
    <string name="action_edit">Edit</string>
    <string name="title_activity_address_editor">AddressEditorActivity</string>
    <string name="title_activity_detail">DetailActivity</string>

    <!-- Editor Strings -->
    <string name="name_editor_hint">Name</string>
    <string name="phone_editor_hint">Phone</string>
    <string name="email_editor_hint">Email</string>
    <string name="street_editor_hint">Street</string>
    <string name="city_editor_hint">City</string>
    <string name="state_editor_hint">State</string>
    <string name="zip_editor_hint">Zip Code</string>
    <string name="save_button_text">Save</string>
    <string name="error_name_required">Name Required</string>
    <string name="error_email_format">Invalid Email Format</string>

    <!-- Detail Strings -->
    <string name="name_detail_label">Name:</string>
    <string name="phone_detail_label">Phone:</string>
    <string name="email_detail_label">Email:</string>
    <string name="street_detail_label">Street:</string>
    <string name="city_detail_label">City:</string>
    <string name="state_detail_label">State:</string>
    <string name="zip_detail_label">Zip Code:</string>
    <string name="call_button_label">Dial</string>
    <string name="email_button_label">Email</string>
    <string name="maps_button_label">Direction</string>
    <string name="error_phone_dialer">Cannot Resolve Phone Dialer</string>
    <string name="error_email_client">Cannot Resolve Email Client</string>
    <string name="error_map_client">Cannot Resolve Map Client</string>

    <!-- Delete dialog -->
    <string name="dialog_delete">Delete</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_message">Delete Address?</string>
    <string name="dialog_title">Delete Address</string>


</resources>
