<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:columnCount="2">

    <TextView
        android:id="@+id/name_detail_label"
        android:layout_marginBottom="@dimen/abc_list_item_padding_horizontal_material"
        android:text="@string/name_detail_label"
        android:textSize="@dimen/address_detail_label"
        app:layout_columnWeight="1"/>

    <TextView
        android:id="@+id/name_detail_textview"
        android:layout_marginBottom="@dimen/abc_list_item_padding_horizontal_material"
        android:textSize="@dimen/address_detail_label"
        app:layout_columnWeight="3"/>

    <TextView
        android:id="@+id/phone_detail_label"
        android:layout_marginBottom="@dimen/abc_list_item_padding_horizontal_material"
        android:text="@string/phone_detail_label"
        android:textSize="@dimen/address_detail_label"
        app:layout_columnWeight="1"/>

    <TextView
        android:id="@+id/phone_detail_textview"
        android:layout_marginBottom="@dimen/abc_list_item_padding_horizontal_material"
        android:textSize="@dimen/address_detail_label"
        android:autoLink="phone"
        app:layout_columnWeight="3"/>

    <TextView
        android:id="@+id/email_detail_label"
        android:layout_marginBottom="@dimen/abc_list_item_padding_horizontal_material"
        android:text="@string/email_detail_label"
        android:textSize="@dimen/address_detail_label"
        app:layout_columnWeight="1"/>

    <TextView
        android:id="@+id/email_detail_textview"
        android:layout_marginBottom="@dimen/abc_list_item_padding_horizontal_material"
        android:textSize="@dimen/address_detail_label"
        android:autoLink="email"
        app:layout_columnWeight="3"/>

    <TextView
        android:id="@+id/street_detail_label"
        android:layout_marginBottom="@dimen/abc_list_item_padding_horizontal_material"
        android:text="@string/street_detail_label"
        android:textSize="@dimen/address_detail_label"
        app:layout_columnWeight="1"/>

    <TextView
        android:id="@+id/street_detail_textview"
        android:layout_marginBottom="@dimen/abc_list_item_padding_horizontal_material"
        android:textSize="16sp"
        app:layout_columnWeight="3"/>

    <TextView
        android:id="@+id/city_detail_label"
        android:layout_marginBottom="@dimen/abc_list_item_padding_horizontal_material"
        android:text="@string/city_detail_label"
        android:textSize="@dimen/address_detail_label"
        app:layout_columnWeight="1"/>

    <TextView
        android:id="@+id/city_detail_textview"
        android:layout_marginBottom="@dimen/abc_list_item_padding_horizontal_material"
        android:textSize="@dimen/address_detail_label"
        app:layout_columnWeight="3"/>

    <TextView
        android:id="@+id/state_detail_label"
        android:layout_marginBottom="@dimen/abc_list_item_padding_horizontal_material"
        android:text="@string/state_detail_label"
        android:textSize="@dimen/address_detail_label"
        app:layout_columnWeight="1"/>

    <TextView
        android:id="@+id/state_detail_textview"
        android:layout_marginBottom="@dimen/abc_list_item_padding_horizontal_material"
        android:textSize="@dimen/address_detail_label"
        app:layout_columnWeight="3"/>

    <TextView
        android:id="@+id/zip_detail_label"
        android:layout_marginBottom="@dimen/abc_list_item_padding_horizontal_material"
        android:text="@string/zip_detail_label"
        android:textSize="@dimen/address_detail_label"
        app:layout_columnWeight="1"/>

    <TextView
        android:id="@+id/zip_detail_textview"
        android:layout_marginBottom="@dimen/abc_list_item_padding_horizontal_material"
        android:textSize="@dimen/address_detail_label"
        app:layout_columnWeight="3"/>

</android.support.v7.widget.GridLayout>